# unsupervised-speaker-diarization

./: .env  .gitignore  .gitmodules  demo.py  demo.txt  diarization.csv  pyproject.toml  test.csv
ci_sdr/: setup.py
espnet/: setup.py
runs/Dec21_11-07-16_Precision3630/: events.out.tfevents.1671588438.Precision3630.20349.0
runs/Dec21_11-11-30_Precision3630/: events.out.tfevents.1671588691.Precision3630.20669.0
runs/Dec21_11-14-58_Precision3630/: events.out.tfevents.1671588899.Precision3630.21698.0
runs/Dec21_11-15-07_Precision3630/: events.out.tfevents.1671588909.Precision3630.21788.0
runs/Dec21_11-17-33_Precision3630/: events.out.tfevents.1671589054.Precision3630.22202.0
runs/Dec21_11-18-48_Precision3630/: events.out.tfevents.1671589130.Precision3630.22370.0
runs/Dec21_11-21-10_Precision3630/: events.out.tfevents.1671589271.Precision3630.22603.0
runs/Dec21_11-23-09_Precision3630/: events.out.tfevents.1671589390.Precision3630.22720.0
runs/Dec21_11-29-43_Precision3630/: events.out.tfevents.1671589785.Precision3630.23063.0
runs/Nov17_12-04-56_Precision3630/: events.out.tfevents.1668654297.Precision3630.18237.0
runs/Nov17_12-05-42_Precision3630/: events.out.tfevents.1668654343.Precision3630.18390.0
runs/Nov17_12-06-05_Precision3630/: events.out.tfevents.1668654366.Precision3630.18562.0
tests/: test_yamnet.py
unsupervised_speaker_diarization/losses/: __init__.py  jitter.py
unsupervised_speaker_diarization/models/: detect_speech.py  extract_feature.py  model.py  speaker_diarization.py  speaker_separation.py
