[tool.poetry]
name = "unsupervised-speaker-diarization"
version = "0.1.0"
description = ""
authors = ["yuta0306 <you-2001-3-6@ezweb.ne.jp>"]
readme = "README.md"
packages = [{include = "unsupervised_speaker_diarization"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "1.12.0"
librosa = "^0.9.2"
tensorflow = "^2.10.0"
tensorflow-hub = "^0.12.0"
numpy = "^1.23.4"
transformers = "^4.24.0"
PySoundFile = "^0.9.0.post1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
